@@ -25,6 +25,7 @@ Cacti CHANGELOG
 -bug#0001176: Problem validating IPv6 addresses
 -bug#0001180: Graph Export to CSV failed by using IE 6 SP2
 -bug#0001182: Subdirectories are not secure and allow browsing
+-bug#0001188: no graph export in tree mode 
 -bug#0001191: Faulty IP address validation by ping.php script
 -bug#0001194: RRDtool URL is incorrect on the about page
 -bug#0001204: since upgrade to 0.87b the hosts with ip address with 255 are down and have no datas
